# raise-enclave

./: Dockerfile  README.md  setup.cfg
.github/workflows/: tests.yml
deploy/: README.md
deploy/buildspec/: build.yml
deploy/k8s/: argo-rbac.yaml  networkpolicy.yaml  raise-enclave-runner-sa.yaml
docs/: usage.md
enclave_mgmt/: collect_data.py  compile_models.py  create_models.py  create_workflow.py  data_collection.py  model_creation.py  models.py  workflow_template.yaml
examples/data/: assessments.csv  content_loads.csv  course_contents.csv  courses.csv  enrollments.csv  grades.csv  ib_input_instances.csv  ib_input_submissions.csv  ib_pset_problem_attempts.csv  ib_pset_problems.csv  quiz_attempts.csv  quiz_multichoice_answers.csv  quiz_questions.csv  users.csv
examples/quiz-analyzer/: README.md
tests/: conftest.py  test_collect_data.py  test_compile_models.py  test_create_models.py  test_create_workflow.py  test_models.py
tests/data/: content_loaded_v1.json  courses.csv  demographics.csv  grades.json  grades_3.json  ib_content_loads.json  ib_input_instances.csv  ib_input_submissions.json  ib_input_submitted_v1.json  ib_problem_attempts.json  ib_pset_problem_attempted_v1.json  quiz_multichoice_answers.csv  quiz_question_contents.csv  quiz_questions.csv  research_filter.csv  users.csv  users.json  users_3.json
tests/data/expected/: assessments.csv  content_loads.csv  course_contents.csv  courses.csv  enrollments.csv  grades.csv  ib_content_loads.csv  ib_input_submissions.csv  ib_problem_attempts.csv  ib_pset_problem_attempts.csv  oneroster_demographics.csv  (+6 more)
(+13 files in other folders)
