[metadata]
name = raise-enclave-mgmt
version = 0.0.1

[options]
packages = enclave_mgmt
install_requires =
    boto3==1.28.57
    pandas==2.1.1
    pydantic==2.4.2
    jinja2==3.1.2
[options.extras_require]
test =
    flake8
    pytest
    pytest-cov
    pytest-mock
    PyYAML

[options.package_data]
enclave_mgmt =
    *.yaml
[options.entry_points]
console_scripts =
    compile-models = enclave_mgmt.compile_models:main
    create-workflow = enclave_mgmt.create_workflow:main