[metadata]
name = raise-enclave-mgmt
version = 0.0.1

[options]
packages = enclave_mgmt
install_requires =
    boto3==1.34.23
    pandas==2.2.0
    pydantic==2.5.3
    jinja2==3.1.3
[options.extras_require]
test =
    flake8
    pytest
    pytest-cov
    pytest-mock
    PyYAML

[options.package_data]
enclave_mgmt =
    *.yaml
[options.entry_points]
console_scripts =
    compile-models = enclave_mgmt.compile_models:main
    create-workflow = enclave_mgmt.create_workflow:main